fix background cutoff on firefox

--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,6 @@ body {
   padding: 0;
   font-family: sans-serif;
   -webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale;
+  width: min-content;
 }
